# canteen-management-system-server

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.prod.yaml  compose.yaml  pyproject.toml  test_group_assignment.py
apps/authentication/: admin.py  authentication.py  crypto.py  models.py  serializers.py  services.py  session_service.py  urls.py  utils.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/common/: apps.py  constants.py  drf_permissions.py  mixins.py  models.py  permissions.py  redis_client.py  utils.py
apps/menus/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
apps/menus/migrations/: 0001_initial.py  (+6 more)
apps/orders/: admin.py  admin_views.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/transactions/: models.py
apps/users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/wallets/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/webhooks/: admin.py  handlers.py  models.py  permissions.py  services.py  urls.py  views.py
config/: settings.py  urls.py
fixtures/: categories.json  items.json  menu_items.json  menus.json
fixtures (new)/: 04_menus.json  05_menuitems.json  06_orders.json  07_orderitems.json  08_balances.json  09_transactions.json
fixtures_mihaela/: test_menuitems.json  test_menus.json
nginx/: nginx.conf
nginx/conf.d/: default.conf
root/: Dockerfile  compose.yaml  pyproject.toml
root/config/: settings.py
scripts/: entrypoint.sh  start-django-prod.sh
(+23 files in other folders)
