[project]
name = "root"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "psycopg[binary]>=3.2.9",
    "ruff>=0.12.12",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
